--- a/django_project/templates/news/general_news.html
+++ b/django_project/templates/news/general_news.html
@@ -17,7 +17,7 @@
     padding: 8px; /* Отступы внутри ячеек */
   }
 </style>
-{% for news in all_news %}
+{% for news in general_news %}
 <div
   class="card-container container mt-5"
   style="color: white; border: 2px solid #cc4848; padding: 20px; margin: 70px"
