--- a/django_project/templates/includes/base.html
+++ b/django_project/templates/includes/base.html
@@ -106,7 +106,7 @@
                 aria-labelledby="navbarDropdown"
                 style="background-color: #343a40; border: 2px solid #cc4848"
               >
-                <a class="dropdown-item" href="#">Profile</a>
+                <a class="dropdown-item" href="{% url 'users:profile' request.user.id %}">Profile</a>
                 <a class="dropdown-item" href="#">Another action</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="{% url 'users:logout' %}"
