--- a/django_project/templates/news/edit_news.html
+++ b/django_project/templates/news/edit_news.html
@@ -8,7 +8,7 @@
   <h1 class="text-center mb-4">Создание новости</h1>
   <form method="post">
     {% csrf_token %} {{ form.media }} {{ form.as_p }} 
-    <button type="submit" class="card-button w-100">Создать</button>
+    <button type="submit" class="card-button w-100">Сохранить</button>
   </form>
 </div>
 
