--- a/django_project/templates/users/profile.html
+++ b/django_project/templates/users/profile.html
@@ -1,51 +1,30 @@
-{% extends "includes/base.html" %} {% block title %}Регистрация{% endblock %}
+{% extends "includes/base.html" %}
+{% block title %}Регистрация{% endblock %}
 {% block content %}
-
-<div
-  class="card-container container mt-5"
-  style="color: white; border: 2px solid #cc4848; padding: 20px"
->
+{% load widget_tweaks %}
+<div class="card-container container mt-5" style="color: white; border: 2px solid #cc4848; padding: 20px">
   <h1 class="text-center mb-4">Профиль</h1>
   <form method="post">
     {% csrf_token %}
 
-    <!-- Поле username -->
-    <div class="mb-3">
-      <label for="{{ form.username.id_for_label }}" class="form-label"
-        >{{ form.username.label }}</label
-      >
-      {{ form.username }} {% if form.username.errors %}
-      <div class="alert alert-danger">{{ form.username.errors }}</div>
-      {% endif %}
-    </div>
-    <!-- Поле email -->
-    <div class="mb-3">
-      <label for="{{ form.email.id_for_label }}" class="form-label"
-        >{{ form.email.label }}</label
-      >
-      {{ form.email }} {% if form.email.errors %}
-      <div class="alert alert-danger">{{ form.email.errors }}</div>
-      {% endif %}
-    </div>
-
-    <!-- Поле bio -->
-    <div class="mb-3">
-      <label for="{{ form.bio.id_for_label }}" class="form-label"
-        >{{ form.bio.label }}</label
-      >
-      {{ form.bio }} {% if form.bio.errors %}
-      <div class="alert alert-danger">{{ form.bio.errors }}</div>
-      {% endif %}
-    </div>
-
-    <!-- Кнопка отправки -->
-    <button
-      type="submit"
-      class="btn card-button w-100"
-      style="color: white; margin-top: 5px"
-    >
+    {% for field in form %}
+      <div class="mb-3">
+        <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
+        {% if is_owner %}
+          {% render_field field %}
+        {% else %}
+          {% render_field field disabled=True %}
+        {% endif %}
+        {% if field.errors %}
+          <div class="alert alert-danger">{{ field.errors }}</div>
+        {% endif %}
+      </div>
+    {% endfor %}
+    {% if is_owner %}
+    <button type="submit" class="btn card-button w-100" style="color: white; margin-top: 5px">
       Сохранить
     </button>
+    {% endif %}
   </form>
 </div>
 
