--- a/django_project/static/styles/blocks copy.css
+++ b/django_project/static/styles/blocks copy.css
@@ -1,5 +1,4 @@
 .card-container {
-    overflow-x: auto;
     word-wrap: break-word;
     background-color: #2b2f33; /* Темнее и современнее */
     padding: 24px 28px;
@@ -8,7 +7,7 @@
     border-radius: 16px;
     border: 1.5px solid #cc4848;
     width: 90%;
-    max-width: 1000px;
+    max-width: 780px;
     box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
     transition: box-shadow 0.3s ease, transform 0.3s ease;
 }
@@ -75,27 +74,6 @@
     font-weight: 500;
     font-size: 18px;
     box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.2);
-
-    /* Гарантируем, что содержимое не выйдет за границы */
-    overflow: hidden;
-    word-wrap: break-word;
-    gap: 16px; /* между элементами */
-}
-
-.header-username,
-.header-status {
-    /* Оба элемента могут переноситься */
-    word-wrap: break-word;
-    flex: 1; /* даём равное пространство */
-    min-width: 0; /* критично для переноса внутри flex-элементов */
-    color: #ffffff;
-}
-
-.header-status {
-    text-align: right;
-    color: #c84747; /* цвет статуса */
-    font-weight: 500;
-    white-space: normal; /* разрешаем перенос */
 }
 
 .card-footer {
@@ -203,7 +181,7 @@
 }
 
 .spoiler-toggle:hover {
-    /* background: rgba(255, 255, 255, 0.08); */
+    background: rgba(255, 255, 255, 0.08);
     transform: translateY(-2px);
     box-shadow: 0 6px 16px rgba(0, 0, 0, 0.35);
 }
