Не доделанная система запросов команды на участие в утрнире

--- a/django_project/templates/includes/base.html
+++ b/django_project/templates/includes/base.html
@@ -108,6 +108,13 @@
                 </button>
               </a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'teams:my_invitations' %}">
+                <button class="card-button">
+                  Заявки на участие в турнире
+                </button>
+              </a>
+            </li>
           </ul>
 
           <!-- Right navbar -->
