--- a/django_project/templates/includes/tabs_manage_tournament.html
+++ b/django_project/templates/includes/tabs_manage_tournament.html
@@ -1,11 +1,11 @@
 
-<nav class="navbar">
+<nav class="navbar" style="margin-bottom: 30px">
   <div class="nav-links">
-    <a href="#">Сражения</a>
+    <a href="{% url 'tournaments:manage_tournament_battles' tournament_id=tournament_id %}">⚔️Сражения</a>
     {% comment %} <a href="{% url 'tournaments:manage_tournament_teams' %}">Команды</a> {% endcomment %}
-    <a href="#">Команды</a>
-    <a href="{% url 'tournaments:manage_tournament_requests' tournament_id=tournament_id status_filter='all' %}">Заявки на участие</a>
-    <a href="#">Судьи</a>
-    <a href="{% url 'tournaments:tournament_news' tournament_id=tournament_id %}">Новости</a>
+    <a href="#">🤝Команды</a>
+    <a href="{% url 'tournaments:manage_tournament_requests' tournament_id=tournament_id status_filter='all' %}">✉️Заявки на участие</a>
+    <a href="{% url 'tournaments:manage_tournament_judges' tournament_id=tournament_id %}">👨‍⚖️Судьи</a>
+    <a href="{% url 'tournaments:tournament_news' tournament_id=tournament_id %}">📰Новости</a>
   </div>
 </nav>
