--- a/django_project/templates/includes/base.html
+++ b/django_project/templates/includes/base.html
@@ -73,15 +73,15 @@
         <div class="nav-links">
           <img width="65px" height="auto" src="{% static 'images/logo.png' %}" />
           <a href="{% url 'homepage' %}">Главная</a>
-          <a href="{% url 'teams:select_type_team_view' %}">Команды</a>
-          <a href="{% url 'tournaments:all_tournaments' %}">Турниры</a>
-          <a href="{% url 'teams:my_invitations' %}">Мои приглашения</a>
-          <a href="{% url 'tournaments:user_all_request_team_tournament' %}">Заявки на участие</a>
+          <a href="{% url 'teams:select_type_team_view' %}">🤝Команды</a>
+          <a href="{% url 'tournaments:all_tournaments' %}">🏆Турниры</a>
+          <a href="{% url 'teams:my_invitations' %}">📩Мои приглашения</a>
+          <a href="{% url 'tournaments:user_all_request_team_tournament' %}">📃Заявки на участие</a>
           {% if not request.user.is_authenticated %}
-          <a href="{% url 'social:begin' 'steam' %}">Steam</a>
+            <a href="{% url 'social:begin' 'steam' %}">Steam</a>
           {% else %}
-          <a href="{% url 'users:profile' user_id=request.user.id %}"><font style="color: #cc4848">{{ request.user.email }}<font></a>
-          <a href="{% url 'users:logout' %}">Выйти</a>
+            <a href="{% url 'users:profile' user_id=request.user.id %}"><font style="color: #cc4848">{{ request.user.email }}<font></a>
+            <a href="{% url 'users:logout' %}">🚪Выйти</a>
           {% endif %}
         </div>
     </header>
