--- a/django_project/templates/tournaments/manage_tournament_judges.html
+++ b/django_project/templates/tournaments/manage_tournament_judges.html
@@ -5,9 +5,14 @@
     <h1>Судьи турнира</h1>
     <hr class="card-hr">
     {% for judge in judges %}
-        <div class="card-container-inner" align="center">
-            <h3 class="card-header" style="width: 80%"><a class="card-link" href="{% url 'users:profile' user_id=judge.id %}">{{ judge.username }}</a><h2>
-        </div>
+        <h2 class="card-header">
+                <span class="header-username"><a class="card-link" href="{% url 'users:profile' user_id=judge.id %}">{{ judge.username }}</a></span>
+                <a href="{% url 'tournaments:remove_judge' user_id=judge.id tournament_id=tournament_id %}">
+                    <button class="card-button w-100 accept_button" align="right">
+                        Удалить
+                    </button>
+                </a>
+            </h2>
     {% endfor %}
 <div>
 
