--- a/django_project/templates/users/profile.html
+++ b/django_project/templates/users/profile.html
@@ -15,7 +15,7 @@
     {% for field in form %}
       <div class="mb-3">
         <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
-        {% if is_owner %}
+        {% if is_owner_profile %}
           {% render_field field %}
         {% else %}
           {% render_field field disabled=True %}
@@ -25,7 +25,7 @@
         {% endif %}
       </div>
     {% endfor %}
-    {% if is_owner %}
+    {% if is_owner_profile %}
     <button type="submit" class="btn card-button w-100" style="color: white; margin-top: 5px">
       Сохранить
     </button>
